CHANGE: UI   | Bug #1112278: https:// URLs now autopaste in Open URL window [CrazyAlchemist]
CHANGE: UI   | Main menu bar should now be more streamlined in its arrangement [CrazyAlchemist]
CHANGE: UI   | Console view will now display information logged (for the duration of the application session) when the Console view is closed [CrazyAlchemist]

BUGFIX: Core | IPFilters loaded from static config file weren't working [Parg]
BUGFIX: Core | Fix re-announce interval bug when zero peers in swarm [Nolar]
BUGFIX: UI   | Corrected save dialog behaviour on Make Torrent Wizard regarding file selection [CrazyAlchemist]
BUGFIX: UI   | Bug #953619 concerning Mac OS X: Double-clicking .torrent files now activate Azureus with the expected Finder dialogs (Dragging files to the Dock icon will continue to malfunction for the indefinite future) [CrazyAlchemist]
BUGFIX: UI   | Bug #1120995: Improper validation could allow unreasonably low global upload cap [CrazyAlchemist]
BUGFIX: UI   | Main window no longer tries to steal focus on opening (Mac OS X) [CrazyAlchemist]
BUGFIX: UI   | Pop up messages no longer try to steal focus (Mac OS X) [CrazyAlchemist]
BUGFIX: UI   | Resolved fuzzy dock icon display under Mac OS X if Column Setup is opened [CrazyAlchemist]
BUGFIX: UI   | Upload caps for individual transfers now display more sensible values if global upload cap is set to unlimited [CrazyAlchemist]
BUGFIX: UI   | In My Torrents, a category view will no longer prevent its corresponding table view's horizontal scrolling [CrazyAlchemist]
BUGFIX: UI   | Download bars should no longer disappear when the main window is minimized (Mac OS X) [CrazyAlchemist]
BUGFIX: UI   | Certain table column contents no longer 'disappear' when a row is selected (Mac OS X) [CrazyAlchemist]
BUGFIX: Core | Send uninterested message when complete while using do-not-download feature [Nolar]





2004.12.18 | Azureus 2.2.0.2

FEATURE: Core | Manual peer upload blocking (when seeding) and kick-banning [Nolar]