@@ -1341,9 +1341,8 @@ ConfigView.section.connection.advanced.SO_RCVBUF=Socket SO_RCVBUF size [0: use O
 ConfigView.section.connection.advanced.SO_RCVBUF.tooltip=Sets the standard socket SO_RCVBUF value (in bytes), i.e. TCP receive window size and scale.\nAzureus leaves this unset by default, meaning the defaults for the underlying OS are used.\nNOTE: Linux doubles the given value.
 ConfigView.section.connection.advanced.SO_SNDBUF=Socket SO_SNDBUF size [0: use OS default]
 ConfigView.section.connection.advanced.SO_SNDBUF.tooltip=Sets the standard socket SO_SNDBUF value (in bytes), i.e. the TCP send window size.\nAzureus leaves this unset by default, meaning the defaults for the underlying OS are used.\nNOTE: Linux doubles the given value.
-ConfigView.section.connection.advanced.IPTOS=Outgoing packet type-of-service (TOS) [ex. 0x02, 0x10]
+ConfigView.section.connection.advanced.IPTOS=Outgoing packet type-of-service (TOS) [see http://azureus.aelitis.com/wiki/index.php/AdvancedNetworkSettings]
 ConfigView.section.connection.advanced.IPTOS.tooltip=Sets traffic class / type-of-service (TOS) field in the IP header for outgoing packets.\nAzureus leaves this unset by default, meaning the defaults for the underlying OS are used.\nExample values are:\n0x02 for IPTOS_LOWCOST\n0x04 for IPTOS_RELIABILITY\n0x08 for IPTOS_THROUGHPUT\n0x10 for IPTOS_LOWDELAY\nNOTE: Underlying network implementations may ignore this value, so this option is highly dependent on OS and JRE versions.
-ConfigView.section.connection.advanced.IPTOS.reboot=Windows reboot required!
 ConfigView.section.interface.confirm_torrent_removal=Show confirmation dialog on torrent removal
 ConfigView.section.interface.confirm_torrent_removal.tooltip=Confirm when Removing a torrent from the MyTorrents view.
 MyTorrentsView.confirm_torrent_removal=Are you sure you want to remove?\n
